# echo_bot_ps

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: checks.yml
app/bot/: __init__.py  bot.py
app/bot/enums/: roles.py
app/bot/filters/: filters.py
app/bot/handlers/: admin.py  others.py  settings.py  user.py
app/bot/keyboards/: keyboards.py  menu_button.py
app/bot/middlewares/: database.py  i18n.py  lang_settings.py  shadow_ban.py  statistics.py
app/infrastructure/database/: connection.py  db.py
config/: config.py
locales/ru/: txt.py
migrations/: create_tables.py
