[project]
name = "echo-bot-ps"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "aiofiles==24.1.0",
    "aiogram==3.20.0.post0",
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.11.18",
    "aiosignal==1.3.2",
    "annotated-types==0.7.0",
    "attrs==25.3.0",
    "black==23.12.1",
    "certifi==2025.4.26",
    "environs==14.1.1",
    "flake8==7.0.0",
    "flake8-pyproject==1.2.3",
    "frozenlist==1.6.0",
    "idna==3.10",
    "isort==5.13.2",
    "magic-filter==1.0.12",
    "marshmallow==4.0.0",
    "multidict==6.4.3",
    "mypy==1.8.0",
    "pre-commit==3.6.0",
    "propcache==0.3.1",
    "psycopg==3.2.6",
    "psycopg-binary>=3.2.9",
    "psycopg-pool==3.2.6",
    "pydantic==2.11.3",
    "pydantic-core==2.33.1",
    "pytest==8.2.0",
    "pytest-cov==4.1.0",
    "python-dotenv==1.1.0",
    "redis==5.2.1",
    "types-requests==2.31.0.20240125",
    "typing-extensions==4.13.2",
    "typing-inspection==0.4.0",
    "yarl==1.20.0",
]

[tool.setuptools]
packages = ["app", "config", "locales", "migrations"]

[tool.black]
line-length = 90
target-version = ['py313']
include = '\.pyi?$'
extend-exclude = '''
/(
  \.eggs
  | \.git
  | \.venv
  | venv
  | env
  | build
  | dist
  | __pycache__
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 90
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
src_paths = ["."]
skip_glob = [
    "*/.venv/*",
    "*/venv/*",
    "*/env/*",
    "*/build/*",
    "*/dist/*",
    "*/__pycache__/*"
]

[tool.mypy]
python_version = "3.13"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = false
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = false
warn_no_return = true
warn_unreachable = true
strict_equality = true
ignore_missing_imports = true
exclude = [
    "^build/",
    "^dist/",
    "^\\.venv/",
    "^venv/",
    "^env/",
    "^__pycache__/",
]

[tool.flake8]
max-line-length = 90
extend-ignore = [
    "E203",  # whitespace before ':'
    "W503",  # line break before binary operator
    "E501",  # line too long (handled by black)
]
extend-select = ["E", "W", "F"]
per-file-ignores = [
    "__init__.py:F401",
    "test_*.py:D",
    "tests/*:D",
    "*_test.py:D",
]
exclude = [
    ".git",
    "__pycache__",
    ".venv",
    "venv",
    "env",
    "build",
    "dist",
    ".eggs",
    "*.egg-info",
]
max-complexity = 10
